--- a/templates/backend_participant/index.html.twig
+++ b/templates/backend_participant/index.html.twig
@@ -1,6 +1,6 @@
 {% extends 'backend_layout.html.twig' %}
 
-{% block title %}{{ parent() }} Liste des participants{% endblock %}
+{% block title %}{{ title }}{% endblock %}
 
 {% block body %}
     <div class="wrapper">
@@ -18,7 +18,25 @@
                 <div class="col-sm-12 col-md-12">
                     <div class="card m-b-30">
                         <div class="card-body">
-                            <h5 class="header-title mb-3 mt-0">Liste des participants</h5>
+                            <div class="row mt-5">
+                                <div class="col-md-12 col-xl-6 offset-xl-3 text-center">
+                                    <div class="row">
+                                        <div class="col-sm-4 text-right"><label for="">Filtrez</label></div>
+                                        <div class="col-sm-8">
+                                            <form action="#" onchange="this.submit()">
+                                                <select name="district" id="" class="form-control select">
+                                                    <option value="">-- Selectionnez le dictrict --</option>
+                                                    <option value=""></option>
+                                                    {% for district in districts %}
+                                                        <option value="{{ district.id }}">{{ district.nom }}</option>
+                                                    {% endfor %}
+                                                </select>
+                                            </form>
+                                        </div>
+                                    </div>
+
+                                </div>
+                            </div>
                             <div class="table-responsive mt-5">
                                 <table id="liste" class="table table-striped table-bordered" cellspacing="0" width="100%">
                                     <thead>
