--- a/templates/backend_layout.html.twig
+++ b/templates/backend_layout.html.twig
@@ -140,7 +140,7 @@
                     {% endif %}
 
 
-                    {% if is_granted('ROLE_ADMIN') %}
+                    {% if is_granted('ROLE_SUPER_ADMIN') %}
                         <li class="has-submenu">
                             <a href="#"><i class="mdi mdi-settings"></i>Paramètres</a>
                             <ul class="submenu megamenu">
