--- a/templates/backend_finance/liste_admin.html.twig
+++ b/templates/backend_finance/liste_admin.html.twig
@@ -1,6 +1,6 @@
 {% extends 'backend_layout.html.twig' %}
 
-{% block title %}{{ parent() }} Inscriptions du {{ periode.debut|date('d-m-Y') }} au {{ periode.fin|date('d-m-Y') }}{% endblock %}
+{% block title %}{{ title }} {% endblock %}
 
 {% block body %}
     <div class="wrapper">
@@ -18,20 +18,45 @@
                 <div class="col-sm-12 col-md-12">
                     <div class="card m-b-30">
                         <div class="card-body">
-                            <h5 class="header-title mb-3 mt-0 text-center">Les inscriptions du {{ periode.debut|date('d-m-Y') }} au {{ periode.fin|date('d-m-Y') }}</h5>
+                            <div class="row">
+                                <div class="col text-right mr-5">
+                                    <span style="font-weight:normal;">Total participation : </span>
+                                    <span style="font-weight:bold; font-size: 2rem; color: darkred"> {{ montant|number_format(0,'','.') }}</span>
+                                    <span style="font-weight:normal; font-size: 1.3rem;">FCFA</span>
+                                </div>
+                            </div>
+                            <div class="row mt-5">
+                                <div class="col-md-12 col-xl-6 offset-xl-3 text-center">
+                                    <div class="row">
+                                        <div class="col-sm-4 text-right"><label for="">Filtrez</label></div>
+                                        <div class="col-sm-8">
+                                            <form action="#" onchange="this.submit()">
+                                                <select name="region" id="" class="form-control select">
+                                                    <option value="">-- Selectionnez la region --</option>
+                                                    <option value=""></option>
+                                                    {% for region in regions %}
+                                                        <option value="{{ region.id }}">{{ region.nom }}</option>
+                                                    {% endfor %}
+                                                </select>
+                                            </form>
+                                        </div>
+                                    </div>
+
+                                </div>
+                            </div>
                             <div class="table-responsive mt-5">
                                 <table id="liste" class="table table-striped table-bordered" cellspacing="0" width="100%">
                                     <thead>
                                     <tr>
                                         <th class="border-top-0 text-center">#</th>
                                         <th class="border-top-0 text-center">REGION</th>
+                                        <th class="border-top-0 text-center">DISTRICT</th>
                                         <th class="border-top-0 text-center">MATRICULE</th>
+                                        <th class="border-top-0 text-center">CARTE</th>
                                         <th class="border-top-0 text-center">NOM & PRENOMS</th>
+                                        <th class="border-top-0 text-center">SEXE</th>
                                         <th class="border-top-0 text-center">FONCTION</th>
-                                        <th class="border-top-0 text-center">TEL PAIMENT</th>
-                                        <th class="border-top-0 text-center">ID TRANSACTIONS</th>
-                                        <th class="border-top-0 text-center">STATUT</th>
-                                        <th class="border-top-0 text-center">DATE</th>
+                                        <th class="border-top-0 text-center">MONTANT</th>
                                     </tr>
                                     </thead>
                                     <tbody>
@@ -39,25 +64,17 @@
                                         <tr>
                                             <td>{{ loop.index }}</td>
                                             <td>{{ liste.region }}</td>
-                                            <td class="text-center">{{ liste.matricule }}</td>
+                                            <td>{{ liste.district }}</td>
+                                            <td class="text-center">
+                                                <a href="{{ path('backend_participant_show', {'matricule': liste.matricule, 'region': liste.regionSlug}) }}" target="_blank">{{ liste.matricule }}</a>
+                                            </td>
+                                            <td class="text-center">{{ liste.carte }}</td>
                                             <td>{{ liste.nom|upper }} {{ liste.prenom|title }}</td>
+                                            <td class="text-center">{{ liste.sexe }}</td>
                                             <td>{{ liste.fonction }}</td>
-                                            <td class="text-center">{{ liste.paieTelephone ? liste.paieTelephone : '-' }}</td>
-                                            <td class="text-center">
-                                                {% if liste.statusPaiement != 'VALID' %}
-                                                    <a href="{{ path('backend_paiement_show', {'idTransaction': liste.idTransaction, 'region': liste.region, 'regionId': liste.regionId}) }}" target="_blank">{{ liste.idTransaction }}</a>
-                                                {% else %}
-                                                    {{ liste.idTransaction }}
-                                                {% endif %}
-
-                                            </td>
-                                            <td class="text-center">
-                                                {% if liste.statusPaiement == 'VALID' %} <span class="badge badge-success">VALIDEE</span>
-                                                {% else %} <span class="badge badge-danger">INACHEVEE</span>
-                                                {% endif %}
-                                            </td>
-                                            <td class="text-center">{{ liste.created|date('Y-m-d H:i:s') }}</td>
+                                            <td class="text-right">{{ liste.montant|number_format(0,'',' ') }}</td>
                                         </tr>
+
                                     {% endfor %}
                                     </tbody>
 
