--- a/templates/carte_layout.html.twig
+++ b/templates/carte_layout.html.twig
@@ -13,22 +13,24 @@
         <link rel="canonical" href="{{ absolute_url(path('app_home')) }}" />
         <meta property="og:locale" content="fr_FR" />
         <meta property="og:type" content="Item" />
-        <meta property="og:title" content="Système Intégré des Camps de Region" />
+        <meta property="og:title" content="ASCCI :: Système Intégré des Camps de Region" />
         <meta property="og:description" content="Mapping des camps de vacances de region" />
         <meta property="og:url" content="{{ absolute_url(path('app_home')) }}" />
         <meta property="og:site_name" content="ASCCI" />
         <meta property="article:section" content="Item" />
         <meta property="article:published_time" content="2021-06-20T15:25:59+00:00" />
-        <meta property="og:image" content="{{ absolute_url(asset('/backoffice/images/logo_sicre.png')) }}" />
+        <meta property="og:image" content="{{ absolute_url(asset('/assets/map/logo_sicre.jpg')) }}" />
         <meta name="twitter:card" content="summary"/>
         <meta name="twitter:description" content="Mapping des camps de vacances de region"/>
-        <meta name="twitter:title" content="Système Intégré des Camps de region"/>
+        <meta name="twitter:title" content="ASCCI :: Système Intégré des Camps de region"/>
         <meta name="twitter:domain" content="ASCCI"/>
-        <meta name="twitter:image:src" content="{{ absolute_url(asset('/backoffice/images/logo_sicre.png')) }}"/>
+        <meta name="twitter:image:src" content="{{ absolute_url(asset('/assets/map/logo_sicre.jpg')) }}"/>
 
         <link rel="shortcut icon" href="{{ absolute_url(asset('/backoffice/images/ascci.png')) }}">
         {% block stylesheets %}
             <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
+            <link href="https://netdna.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.css" rel="stylesheet">
+
             <link rel="stylesheet" href="{{ absolute_url(asset('assets/map/coming.css')) }}">
             <link rel="stylesheet" href="{{ absolute_url(asset('assets/map/carte.css')) }}">
         {% endblock %}
