--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -27,7 +27,7 @@
                 .st13{fill:#01AFF5;}
                 .st14{fill:#0362F8;}
             </style>
-                        <a id="abengourou" xlink:href="http://abengourou.scoutascci.org" xlink:title="Abengourou">
+                        <a id="abengourou" xlink:href="#presentation" xlink:title="Abengourou">
                             <path class="st0" d="M405.5,359.6c-5.8,6.6-6,6.7-11.7,1c-1-0.5-1.5-1.4-1.8-2.4c-0.4-2.4-0.3-4.7,0.1-7
 	c0.5-1.8,1-3.6,1.1-5.5c0-0.6,0.1-1.2,0.3-1.8c0.1-0.6,0.4-1.1,0.6-1.6c0.3-0.5,0.6-1,0.9-1.5c0.6-1,0.7-2.1,0.2-3.2
 	c-0.4-0.3-0.8-0.7-1.2-1c-0.4-0.3-0.8-0.7-1.2-1.1c-0.3-0.5-0.5-0.9-0.7-1.4c-0.4-1-0.8-2-1.3-3c-1-2.1-2.1-4-3.6-5.7
@@ -37,7 +37,7 @@
 	c1.9,3.8,2.1,8.5,3.1,12.8c-3.3,8.9-9.8,16.5-12,26C406.2,356.1,406.6,357.9,405.5,359.6z"/>
                         </a>
 
-                        <a id="abidjan" xlink:href="http://abidjan.scoutascci.org">
+                        <a id="abidjan" xlink:href="#presentation">
                             <path class="st1" d="M351.4,413.9c-3.1-1.4-6.9,0.8-9.7-1.5c-2.1-1.7-3.9-4.2-3.4-6.9c1.5-8.2-3-10.1-9.8-9.8
 	c-4.2,0.2-7.9-0.1-9.2-5.2c-0.2-0.7-1.8-0.9-2.8-1.4c-0.7-0.7-1.1-1.6-1.2-2.6c0-0.7,0.1-1.3,0.3-1.9c0.9-1.9,2.3-3,4.4-3.3
 	c0.9-0.1,1.8,0.1,2.6,0.4c0.5,0.3,0.9,0.7,1.2,1.2c1.9,0.9,3.8,2.1,5.7,0c0.2-0.5,0.5-1,0.9-1.4c3-3.2,7.8-2.6,10.9-5.5
@@ -45,7 +45,7 @@
 	c-1.9,2.1,0.9,5.1-1.4,7.1c0.3,5.4,5.1,8.5,6.9,13.1c0.4,1,1.1,1.8,1.7,2.8C360.6,409.6,356.3,414.8,351.4,413.9z"/>
                         </a>
 
-                        <a id="agboville" xlink:href="http://agboville.scoutascci.org">
+                        <a id="agboville" xlink:href="#presentation">
                             <path class="st2" d="M394.6,338.3c-0.4-0.3-0.8-0.7-1.2-1c-0.4-0.3-0.8-0.7-1.2-1.1c-0.3-0.5-0.5-0.9-0.7-1.4
 	c-0.4-1-0.8-2-1.3-3c-1-2.1-2.1-4-3.6-5.7c-1.1-1.4-2-2.8-2.8-4.4c-0.9-1.8-1.7-3.5-2.6-5.3c-0.2-0.5-0.4-1-0.6-1.6
 	c-0.4-1.4-0.7-2.7-0.9-4.2c-0.2-2.1-1.8-2.7-3.5-3.4c-2.5-0.6-4-1.7-4.7-3.8c0,0.3-0.2,0.7-0.4,1.1c-1.1,0.8-2.4,1-3.7,1.1
@@ -66,7 +66,7 @@
 	c0-0.6,0.1-1.2,0.3-1.8c0.1-0.6,0.4-1.1,0.6-1.6c0.3-0.5,0.6-1,0.9-1.5C394.9,340.4,395,339.4,394.6,338.3z"/>
                         </a>
 
-                        <a id="bondoukou" xlink:href="http://bondoukou.scoutascci.org">
+                        <a id="bondoukou" xlink:href="#presentation">
                             <path class="st3" d="M350.1,205.5c-0.2-0.4-0.5-0.7-0.7-1.1c6.7-4,2.6-8.6,1-13.4c-1.6-4.7,1.6-8.3,4.1-11.9
 	c0.4-1.8,0.3-3.5,0-5.3c-1.3-6.4,1.7-11.7,4.3-17.1c5.9-11.9,5.8-23.4-1.4-34.7c-2.9-4.6-7.2-6.1-12.3-6.2c-1-0.9-2.4-0.5-3.5-1
 	c-2-0.7-4.5,0.5-6-1.9c-1.9-7.6-3.2-15.3-8.9-21.5c-1.2-1.3-0.7-4.3-1-6.5c6.2-6.7,15.7-7,22.9-11.9c3.1-2.2,6.8-3,9.5-6.6
@@ -80,7 +80,7 @@
 	C350.4,206.9,350.1,206.2,350.1,205.5z"/>
                         </a>
 
-                        <a id="bouake" xlink:href="http://bouake.scoutascci.org">
+                        <a id="bouake" xlink:href="#presentation">
                             <path class="st4" d="M390.4,250.1c-1.7,7-5.8,13.2-7.1,20.6c-0.5,2.9-3.3,8.4-7.6,10.4c-2.7,1.2-3.4,3.3-3.6,5.9
 	c-0.1,1.9-0.1,3.9-1.3,5.6c-2,1.3-4.4,0.5-6.6,1.1c-1.9,0.3-3.8,0.4-5.6-0.6c-1.1-2.3-2.2-1.6-3.3,0.1c-1.8,0.9-3.7,0.9-5.6,0.2
 	c-3.7-1.9-0.7-5.6-2.2-8c-2.4-1.3-5.1-0.9-7.6-1.5c-0.9,0.1-1.7,0.2-2.6,0.3c-1.8,0.3-3.5,0.4-5.3-0.2c-1.3-0.7-2.6-0.7-4,0
@@ -95,7 +95,7 @@
 	c10.6,2.4,12.2,14.7,21.1,18.9C391.3,247.3,390.4,248.8,390.4,250.1z"/>
                         </a>
 
-                        <a id="daloa" xlink:href="http://daloa.scoutascci.org">
+                        <a id="daloa" xlink:href="#presentation">
                             <path class="st5" d="M222.4,231.4c0.9,1,1.7,2,2.6,3c1.9,2.3-1,5.9,2,8c0.5,0.1,0.8,0.3,0.7,0.8c1.4,2.7,5.6-0.1,6.7,3.3
 	c-2.5,2.7-4.6,4.7-0.7,8.7c2.8,2.8-0.3,7.7,0.5,11.6c2.6,4.6,0.3,10,2.7,14.6l0.3,0.1c0.9,2.4,0.4,5.4,2.8,7.3
 	c0.7,0.9,1.3,1.9,1.8,2.9c0.5,0.9,1.1,1.9,1.8,2.6c0.8,0.7,1.8,1.4,2.3,2.3c1,2,0.4,4.4,1.6,6.4c0.6,0.9,1.5,1.7,2,2.6
@@ -108,7 +108,7 @@
 	c-1.4,3.5-1.9,7.2-1.8,11C220.4,229.4,220.8,230.7,222.4,231.4z"/>
                         </a>
 
-                        <a id="gagnoa" xlink:href="http://gagnoa.scoutascci.org">
+                        <a id="gagnoa" xlink:href="#presentation">
                             <path class="st6" d="M217,402.3c-0.7-3.3-3.9-4.7-5.6-7.3c-1.7-2.6-3.5-4.8-2.6-8.4c0.8-3.6-1-6.3-4.1-9
 	c-6.1-5.2-9.5-12.6-14.3-19c-3.5-4.6-7.5-8.9-7-15.3c-0.5-1.6,0.3-2.6,1.6-3.4c4.9-1.4,9.6-3.5,14.9-3.8c3.9-0.3,6.4-3.2,8-6.5
 	c1.7-3.6,4.1-6.4,7.5-8.4c1.6-0.7,3.3-0.8,4.9-0.4c1.2,0.3,2.4,0.8,3.6,1.3c2.6,1.1,5.1,0.9,7.5-0.5c4.6-5,11.5-7.6,14.6-14.1
@@ -120,7 +120,7 @@
 	c0.9-0.6,2.5-1,2-2.1c-2.2-4.3-0.9-10.3-6-13.3C224.3,402.7,220.3,404.7,217,402.3z"/>
                         </a>
 
-                        <a id="bassam" xlink:href="http://bassam.scoutascci.org">
+                        <a id="bassam" xlink:href="#presentation">
                             <path class="st7" d="M417.7,328.4c0.3,1,0.7,2.1,1,3.1c-0.7,1.9-0.5,3.9-0.2,5.6c-0.3-0.6-0.2-1.3,0.6-1.9
 	c3,7.6,7,14.9,7.7,23.2c-0.8,2.5-0.5,5-0.3,6.8c-0.1-0.5-0.5-1.9,0.7-3c1.4,2.2,1.2,4.6,1.1,7c-0.4,1.7-1.4,3.5,0.4,5
 	c4.4,3.5,8.6-0.8,13.1-0.3c9.1,0.9,10.4,1.7,11.1,10.6c0.6,6.7-2.8,13.3-0.6,20c0.3,0.9-1.7,2.5-2.6,3.7c-1.8,3.1-3.3,6.4-7.4,7
@@ -130,7 +130,7 @@
 	C415.8,328.6,416.7,328.3,417.7,328.4z"/>
                         </a>
 
-                        <a id="katiola" xlink:href="http://katiola.scoutascci.org">
+                        <a id="katiola" xlink:href="#presentation">
                             <path class="st8" d="M230.2,164.2c-3.3,1.2-1.7,5.1-3.8,7c-7.6-1.6-12.8-6.3-17.7-12.1c-6.4-7.5-13.4-14.5-20.1-21.7
 	c-1.7-4.9,0.5-10.1-1.3-14.9c-3.9-4.2-6.6-0.1-8.8,1.9c-3.5,3.2-6.8,5.4-11.8,3.7c-2-0.7-4.4-0.2-6.1,1.7c-4.9,5.2-14.7,3.8-16.5-3
 	c-1.2-4.7-3.8-9.8-1.1-15c0.9-3.1,0.9-6.2,0-9.3c-1.6-4.8-0.8-9.5,0.4-14.3c1.8-7.7-1.1-12.4-8.7-14c-5.6-1.2-7.4-6.3-3.4-10.6
@@ -142,7 +142,7 @@
 	c-7.8-2-7.9,1.7-7.5,7.1c0.1,0.9,0,1.8,0,2.7C230.8,161.6,230.6,162.9,230.2,164.2z"/>
                         </a>
 
-                        <a id="korhogo" xlink:href="http://korhogo.scoutascci.org">
+                        <a id="korhogo" xlink:href="#presentation">
                             <path class="st9" d="M246.3,194.2c-3.6-2.8-7.2-5.6-10.8-8.4c-1.3-2.5,0.5-5.5-1.2-8c-2.4-2.5-6.2-3.3-7.9-6.6
 	c-0.5-3-0.4-5.7,2.7-7.2c3.1-1.7-1-3.2-0.1-4.8c-0.7-9.4,0.1-10.3,8.8-10.6c6.3-0.2,8.5-3.2,6.2-9.2c-5.1-13.5-1.9-24.7,8.7-34
 	c2.9-2.5,2.9-4.7,0.6-7.4c-2.6-3.2-6.1-5.1-9.7-7c-1.5-0.8-3.6-0.8-4.2-2.9c0.3-1.3,1.4-1.2,2.4-1.1c-1.1-0.3-2.1-0.1-3,0.5
@@ -155,7 +155,7 @@
 	c-1.6-2.4-3.9-1.9-6.2-1.6c-0.6,0-1.1-0.2-1.5-0.7c-0.6-2.6-1.1-5.2-1.7-7.8C249.4,196.4,247.7,195.6,246.3,194.2z"/>
                         </a>
 
-                        <a id="man" xlink:href="http://man.scoutascci.org">
+                        <a id="man" xlink:href="#presentation">
                             <path class="st10" d="M87.4,235.5c5.4-2.2,4.6-7.9,6.7-12c-0.4-4.5-1.2-9,0.5-13.4l-0.2,0.2c2.7-1.5,5.3-1.4,8,0
 	c3,6.4,7.2,11.2,14.7,12.6c2.1,0.4,5.1,1.5,3,5c-2.1,3.5-2.9,8.2-0.2,10.4c2.6,2.2,7.2,3.2,11.2,2.5c2.2-0.4,4.2-1.2,6.5-0.9
 	c2.4,8.9,6.2,17.4,3.2,27.2c-2.1,6.8-2.6,13.9,0.6,20.9c1.8,3.9,0.6,8.4-0.8,12.4c-0.9,2.3-1.8,4.6-0.3,7c0.5,0.9,0.8,1.8,1,2.7
@@ -169,7 +169,7 @@
 	C87,235.7,87.2,235.6,87.4,235.5z"/>
                         </a>
 
-                        <a id="odienne" xlink:href="http://odienne.scoutascci.org">
+                        <a id="odienne" xlink:href="#presentation">
                             <path class="st11" d="M54,68.8c5.2-3.9,7.9-10.6,15.7-11.9c3.2-0.5,7.6-4.2,8-9.9C78.3,40.6,83,37,89,35.2
 	c2.8,0.7,5.9,0.5,8.4,2.4c2.9,0.5,4.4,2.9,6.2,4.9c3.7,4.1,8,7.1,13.7,7.2c2.4,0,4.6,0.3,5.2,3.1c0.6,2.8,2.6,3.5,5,3.2
 	c2.7-0.4,3.3-2.4,3.4-5c0.1-2.1-1-4.5,1.2-6.3c1.1,1,0.4,2.3,0.7,3.4c-0.2-1.3,0.5-2.5,0.5-3.8c5-2.1,10-4.3,15-6.4
@@ -188,7 +188,7 @@
 	c-2.3-3-4.8-1-7.2-0.1c-5.9,2.2-9.3,0.6-11.6-5.6C55.1,94.7,53.6,81.7,54,68.8z"/>
                         </a>
 
-                        <a id="sanpedro" xlink:href="http://sanpedro.scoutascci.org">
+                        <a id="sanpedro" xlink:href="#presentation">
                             <path class="st12" d="M113.4,390.5c0.4,0,0.8,0.1,1.2,0.2c3.6,0.8,7.2,1.3,10.7-0.3c0.2-0.2,0.3-0.4,0.5-0.5
 	c10.9-1.2,12.9-4,10.9-14.9c-1.5-7.9-3.5-15.6-3.6-23.7c-0.1-9.9,2.6-19,7.2-27.7c0.1-0.7,0.5-1.1,1.3-1.1c3.3,1.3,4,4.6,5,7.3
 	c2.1,5.4,5.4,9.5,10.8,11.9c2.6,1.4,5,0.5,7.5-0.4c3.8-1.2,7.5-2.7,11.6-1.9c2.6,0.8,5.4,1,7.3,3.3c5.4,12.9,13.7,23.9,23,34.2
@@ -198,7 +198,7 @@
 	C112.9,412,111.2,400.8,113.4,390.5z"/>
                         </a>
 
-                        <a id="yakro" xlink:href="http://yamoussoukro.scoutascci.org">
+                        <a id="yakro" xlink:href="#presentation">
                             <path class="st13" d="M248.5,305.9c-0.9,0-1.8-0.1-2.1-1.3c-1.6-2.6,0.6-5.7-1.4-8.2c-1.1-0.1-2.2,0-2.7-1.2
 	c-1.1-2.7,4.5-4.1,1.3-7.1c-1.8-0.7-2.7,1.2-4.2,1.6c-4.2-1.7-4.8-4.4-2.3-8c1.1,0,2.2-0.2,2.6,1.2c6.5,3.4,5.7-2.1,6.7-5.5
 	c0.2-0.8,0.6-1.2,1.4-1c0.4,0.4,0.8,0.8,1,1.3c0.5,1.3,0.4,2.8,1.2,4c1.5,1.5,3.3,0.8,5,0.6c0.3,0,0.6-0.1,0.9-0.1
@@ -224,7 +224,7 @@
 	c-2.7-2.4-5.3-5-6.1-8.7c0-1.5,1.3-1.7,2.1-2.4c0.7-1,2.1-1.9,0-2.8C252.5,306.4,250.5,306,248.5,305.9z"/>
                         </a>
 
-                        <a id="yopougon" xlink:href="http://yopougon.scoutascci.org">
+                        <a id="yopougon" xlink:href="#presentation">
                             <path class="st14" d="M284,421.7c-1.5-9.7-2.9-19.5,4.3-27.9c0.3-0.3,0.5-0.7,0.8-1.1c-7.2-5,1.3-7.8,1.3-11.2
 	c0-3.8,1.2-8.6-1.5-12.2c-1.3-1.7-0.6-3.4-1.1-5.1c1.6-0.8,3.1-0.2,4.5,0.5c0.6,0.3,1.1,0.6,1.5,1.1c0.4,0.5,0.7,1,0.9,1.6
 	c0.3,0.8,0.6,1.7,0.8,2.5c1.7,2.8,5.3,3.5,6.9,6.4c0.6,0.7,1.1,1.5,1.4,2.3c0.2,0.6,0.4,1.1,0.5,1.7c1.6,1.4-3.3,5.1,1.8,5.3
@@ -237,29 +237,32 @@
         </svg>
                 </div>
             </div>
+            <div class="col-sm-8 col-xl-4 mt-5 d-md-none">
+                <div class="information alert alert-danger" id="presentation"></div>
+            </div>
             <div class="col-sm-4 col-xl-2 mt-5">
                 <div class="map__list">
                     <ul>
-                        <li><a href="#" id="region-abengourou">Abengourou</a></li>
-                        <li><a href="#" id="region-abidjan">Abidjan</a></li>
-                        <li><a href="#" id="region-agboville">Agboville</a></li>
-                        <li><a href="#" id="region-bondoukou">Bondoukou</a></li>
-                        <li><a href="#" id="region-bouake">Bouake</a></li>
-                        <li><a href="#" id="region-daloa">Daloa</a></li>
-                        <li><a href="#" id="region-gagnoa">Gagnoa</a></li>
-                        <li><a href="#" id="region-bassam">Grand Bassam</a></li>
-                        <li><a href="#" id="region-katiola">Katiola</a></li>
-                        <li><a href="#" id="region-korhogo">Korhogo</a></li>
-                        <li><a href="#" id="region-man">Man</a></li>
-                        <li><a href="#" id="region-odienne">Odienne</a></li>
-                        <li><a href="#" id="region-sanpedro">San Pedro</a></li>
-                        <li><a href="#" id="region-yakro">Yamoussoukro</a></li>
-                        <li><a href="#" id="region-yopougon">Yopougon</a></li>
+                        <li class="st0"><a href="#presentation" id="region-abengourou">Abengourou</a> &nbsp;<a href="http://abengourou.scoutascci.org" title="Inscription au camp"><i class="fa fa-plus-circle fa-lg"></i></a></li>
+                        <li class="st1"><a href="#presentation" id="region-abidjan">Abidjan</a> &nbsp;<a href="http://abidjan.scoutascci.org" title="Inscription au camp"><i class="fa fa-plus-circle fa-lg"></i></a></li>
+                        <li class="st2"><a href="#presentation" id="region-agboville">Agboville</a> &nbsp;<a href="http://agboville.scoutascci.org" title="Inscription au camp"><i class="fa fa-plus-circle fa-lg"></i></a></li>
+                        <li class="st3"><a href="#presentation" id="region-bondoukou">Bondoukou</a> &nbsp;<a href="http://bondoukou.scoutascci.org" title="Inscription au camp"><i class="fa fa-plus-circle fa-lg"></i></a></li>
+                        <li class="st4"><a href="#presentation" id="region-bouake">Bouake</a> &nbsp;<a href="http://bouake.scoutascci.org" title="Inscription au camp"><i class="fa fa-plus-circle fa-lg"></i></a></li>
+                        <li class="st5"><a href="#presentation" id="region-daloa">Daloa</a> &nbsp;<a href="http://daloa.scoutascci.org" title="Inscription au camp"><i class="fa fa-plus-circle fa-lg"></i></a></li>
+                        <li class="st6"><a href="#presentation" id="region-gagnoa">Gagnoa</a> &nbsp;<a href="http://gagnoa.scoutascci.org" title="Inscription au camp"><i class="fa fa-plus-circle fa-lg"></i></a></li>
+                        <li class="st7"><a href="#presentation" id="region-bassam">Grand Bassam</a> &nbsp;<a href="http://bassam.scoutascci.org" title="Inscription au camp"><i class="fa fa-plus-circle fa-lg"></i></a></li>
+                        <li class="st8"><a href="#presentation" id="region-katiola">Katiola</a> &nbsp;<a href="http://katiola.scoutascci.org" title="Inscription au camp"><i class="fa fa-plus-circle fa-lg"></i></a></li>
+                        <li class="st9"><a href="#presentation" id="region-korhogo">Korhogo</a> &nbsp;<a href="http://korhogo.scoutascci.org" title="Inscription au camp"><i class="fa fa-plus-circle fa-lg"></i></a></li>
+                        <li class="st10"><a href="#presentation" id="region-man">Man</a> &nbsp;<a href="http://man.scoutascci.org" title="Inscription au camp"><i class="fa fa-plus-circle fa-lg"></i></a></li>
+                        <li class="st11"><a href="#presentation" id="region-odienne">Odienne</a> &nbsp;<a href="http://odienne.scoutascci.org" title="Inscription au camp"><i class="fa fa-plus-circle fa-lg"></i></a></li>
+                        <li class="st12"><a href="#presentation" id="region-sanpedro">San Pedro</a> &nbsp;<a href="http://sanpedro.scoutascci.org" title="Inscription au camp"><i class="fa fa-plus-circle fa-lg"></i></a></li>
+                        <li class="st13"><a href="#presentation" id="region-yakro">Yamoussoukro</a> &nbsp;<a href="http://yamoussoukro.scoutascci.org" title="Inscription au camp"><i class="fa fa-plus-circle fa-lg"></i></a></li>
+                        <li class="st14"><a href="#presentation" id="region-yopougon">Yopougon</a> &nbsp;<a href="http://yopougon.scoutascci.org" title="Inscription au camp"><i class="fa fa-plus-circle fa-lg"></i></a></li>
                     </ul>
                 </div>
             </div>
-            <div class="col-sm-8 col-xl-4 mt-5">
-                <div class="information alert alert-danger"></div>
+            <div class="col-sm-8 col-xl-4 mt-5 d-none d-md-block">
+                <div class="information alert alert-danger" id="presentation"></div>
             </div>
 
         </div>
@@ -285,6 +288,21 @@
             background-size: contain;
             padding-top: 10px;
         }
+        .st0 .fa{color:#137203;}
+        .st1 .fa{color:#660098;}
+        .st2 .fa{color:#FE501B;}
+        .st3 .fa{color:#4C2B0A;}
+        .st4 .fa{color:#FEFEFE;}
+        .st5 .fa{color:#868686;}
+        .st6 .fa{color:#020202;}
+        .st7 .fa{color:#F8388F;}
+        .st8 .fa{color:#D0A874;}
+        .st9 .fa{color:#A4DC2A;}
+        .st10 .fa{color:#865226;}
+        .st11 .fa{color:#F8DE92;}
+        .st12 .fa{color:#060690;}
+        .st13 .fa{color:#01AFF5;}
+        .st14 .fa{color:#0362F8;}
     </style>
 {% endblock %}
 
