--- a/templates/backend_layout.html.twig
+++ b/templates/backend_layout.html.twig
@@ -132,6 +132,7 @@
                                 <ul>
                                     <li><a href="{{ path('backend_paiement_index', {'statut': 'VALID'}) }}">Validées</a></li>
                                     <li><a href="{{ path('backend_paiement_index', {'statut': 'UNKNOW'}) }}">Inachevées</a></li>
+                                    <li><a href="{{ path('backend_liste_index') }}">Liste par date</a></li>
                                 </ul>
                             </li>
                         </ul>
