--- a/templates/notification/liste.html.twig
+++ b/templates/notification/liste.html.twig
@@ -1,6 +1,6 @@
 {% extends 'backend_layout.html.twig' %}
 
-{% block title %}{{ parent() }} Inscriptions du {{ periode.debut|date('d-m-Y') }} au {{ periode.fin|date('d-m-Y') }} {% endblock %}
+{% block title %}{{ parent() }} Inscriptions du {{ periode.debut|date('d-m-Y') }} au {{ aujourdhui|date('d-m-Y') }} {% endblock %}
 
 {% block body %}
     <div class="wrapper">
@@ -18,7 +18,7 @@
                 <div class="col-sm-12 col-md-12">
                     <div class="card m-b-30">
                         <div class="card-body">
-                            <h5 class="header-title mb-3 mt-0 text-center">Les inscriptions du {{ periode.debut|date('d-m-Y') }} au {{ periode.fin|date('d-m-Y') }}</h5>
+                            <h5 class="header-title mb-3 mt-0 text-center">Les inscriptions du {{ periode.debut|date('d-m-Y') }} au {{ aujourdhui|date('d-m-Y') }}</h5>
                             <div class="table-responsive mt-5">
                                 <table id="liste" class="table table-striped table-bordered" cellspacing="0" width="100%">
                                     <thead>
