--- a/templates/backend_paiement/index.html.twig
+++ b/templates/backend_paiement/index.html.twig
@@ -39,7 +39,11 @@
                                         <tr>
                                             <td>{{ loop.index }}</td>
                                             <td>{{ liste.district }}</td>
-                                            <td class="text-center">{{ liste.matricule }}</td>
+                                            <td class="text-center">
+                                                <a href="{{ path('admin_correction_scout', {'slug': liste.slug}) }}" target="_blank">
+                                                    {{ liste.matricule }}
+                                                </a>
+                                            </td>
                                             <td>{{ liste.nom|upper }} {{ liste.prenom|title }}</td>
                                             <td>{{ liste.fonction }}</td>
                                             <td class="text-center">{{ liste.paieTelephone ? liste.paieTelephone : '-' }}</td>
