--- a/templates/home/close_camp.html.twig
+++ b/templates/home/close_camp.html.twig
@@ -4,7 +4,7 @@
 
     <section class="section">
         <div class="container">
-            <img src="{{ absolute_url(asset('/upload/activite/bassam.png')) }}" class="img-fluid d-block mx-auto" alt="" width="250">
+            <img src="{{ absolute_url(asset('/upload/activite/'~ activite.logo)) }}" class="img-fluid d-block mx-auto" alt="" width="250">
             <h1 class="title text-center font-weight-bold mt-4">Oups !!!!! <br> La plateforme d'inscription est fermée. </h1>
             <h4 class="title text-center font-weight-bold mt-4"><em>Veuillez contacter l'équipe régionale</em></h4>
 
